# clippiti

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  bump_version.sh  pyproject.toml  requirements.txt  run_from_source.sh
.github/workflows/: publish.yml
doc/: 00_clippiti_reuse_master_plan.md  01_reuse_inventory.md  02_buffer_pipeline_reuse.md  03_clipping_reuse.md  04_recording_reuse.md  05_player_integration_python_mpv.md  06_independence_rules_and_non_reuse.md  07_cli_and_config_spec.md  08_implementation_sequence_and_acceptance.md  09_function_level_transplant_map.md  README.md  architecture-overview.md  configuration-and-cli.md  module-reference.md  operations-and-troubleshooting.md  runtime-workflows.md
doc/media/: README.md
doc/mockup/: floating_controls_mockup.py
doc/osd/: osd_panel.ui
src/clippiti/: __init__.py  __main__.py  _version.py  app.py  app_context.py  buffer_engine.py
src/clippiti/model/: __init__.py  config.py
src/clippiti/services/: __init__.py  buffer.py  buffer_engine.py  clipper.py  favicons.py  mpv_args.py  recording.py  remux_queue.py  sl_session.py  snapshot.py  streamlink_args.py
src/clippiti/ui/: __init__.py  app.py  clip_dialog.py  clipper.py  control_strip.py  osd.py  recorder.py  settings.py  settings_dialog.py  toolbar.py  video.py  video_surface.py
tests/: test_buffer_engine.py  test_clipper.py  test_config.py  test_favicons.py  test_main.py  test_mpv_args.py  test_recording.py  test_remux_queue.py  test_sl_session.py  test_streamlink_args.py
