[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clippiti-player"
version = "0.1.0"
description = "Single-stream live player with rolling buffer, clipping, and recording"
requires-python = ">=3.12"
dependencies = [
    "python-mpv>=1.0.7",
    "PyQt6>=6.6.0",
    "PyYAML>=6.0",
    "streamlink>=6.0",
]

[project.scripts]
clippiti = "clippiti.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clippiti"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=clippiti.services --cov=clippiti.model.config --cov-report=term-missing --cov-fail-under=80"
