[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clippiti-player"
dynamic = ["version"]
description = "Single-stream live player with rolling buffer, clipping, and recording"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "python-mpv>=1.0.7",
    "PyQt6>=6.6.0",
    "PyYAML>=6.0",
    "streamlink>=6.0",
]

[project.scripts]
clippiti = "clippiti.__main__:main"

[tool.setuptools]
packages = ["clippiti"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/clippiti/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=clippiti.services --cov=clippiti.model.config --cov-report=term-missing --cov-fail-under=80"
